# azure-content-safety

./: .env.sample  .pre-commit-config.yaml  README.md  Taskfile.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
azure_content_safety/: hosting.py
azure_content_safety/services/: content_safety_service.py
tests/azure_content_safety/services/: test_content_safety_service.py
